# ogs6-btl

./: .gitignore  README.md
btl/: CMakeLists.txt
btl/cmake/: FindBlaze1.cmake  FindMKL.cmake  FindOPENBLAS.cmake
btl/generic_bench/: bench_parameter.hh
btl/libs/BLAS/: CMakeLists.txt  main.cpp
btl/libs/STL/: main.cpp
btl/libs/blaze/: CMakeLists.txt  blaze1_interface.hh  btl_tiny_blaze1.cpp  main_adv.cpp  main_linear.cpp  main_matmat.cpp  main_vecmat.cpp
btl/libs/blitz/: blitz_interface.hh  btl_blitz.cpp
btl/libs/eigen3/: CMakeLists.txt
btl/libs/ublas/: main.cpp
results/: processResults.R
results/amd_quad-core_opteron_8384@0.8GHz/: INFO
results/intel_core2_quad-Q8300@2.50GHz/: INFO
results/intel_core_i5-2430M@2.4GHz/: INFO
results/intel_core_i7-3930K@3.8GHz/: INFO
